Update logo image source in index.html

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="container">
             <div class="header-content">
                 <a href="#" class="logo">
-                    <img src="assets/logo.jpg" alt="AustinstayerFX Logo" class="logo-img">
+                    <img src="logo.jpg" alt="AustinstayerFX Logo" class="logo-img">
                     <span class="logo-text">AustinstayerFX</span>
                 </a>
 
@@ -642,7 +642,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-logo">
-                    <img src="assets/logo.jpg" alt="AustinstayerFX Logo" class="logo-img">
+                    <img src="logo.jpg" alt="AustinstayerFX Logo" class="logo-img">
                     <span class="logo-text">AustinstayerFX</span>
                 </div>
 
